[+] added plots and insights
